--- a/assets/main.css
+++ b/assets/main.css
@@ -10,10 +10,12 @@ body {
 
 p {
   font-size: 14px;
+  font-size: 1.5vw; }
   line-height: 1.75; }
 
 p.large {
   font-size: 16px; }
+  font-size: 1.75vw; }
 
 a,
 a:hover,
@@ -504,6 +506,7 @@ ul.social-buttons {
     width: 40px;
     border-radius: 100%;
     font-size: 20px;
+    font-size: 1.75vw;
     line-height: 40px;
     color: white;
     outline: none;
